chore(core): checkpoint sequencer txn snapshotting callback on release (#6705)

--- a/core/src/main/resources/io/questdb/site/conf/server.conf
+++ b/core/src/main/resources/io/questdb/site/conf/server.conf
@@ -1417,6 +1417,51 @@ cairo.sql.copy.root=import
 #replication.requests.base.timeout=10s
 #replication.requests.min.throughput=262144
 
+### WAL Cleaner (runs on primary, requires replication)
+
+## Master switch for the WAL cleaner.
+#replication.primary.cleaner.enabled=true
+
+## Time between cleanup cycles. Range: 1s – 24h.
+#replication.primary.cleaner.interval=10m
+
+## Use checkpoint history as a cleanup trigger source.
+#replication.primary.cleaner.checkpoint.source=true
+
+## Minimum complete backups/checkpoints per instance before cleanup starts.
+## Defaults to backup.cleanup.keep.latest.n if backups are enabled, otherwise 5.
+#replication.primary.cleaner.backup.window.count=5
+
+## Concurrent deletion tasks. Derived from replication.requests.max.concurrent. Range: 4 – 32.
+#replication.primary.cleaner.delete.concurrency=4
+
+## Rate limit for object store delete requests. Set to 0 for unlimited. Range: 0 – 10000.
+## Defaults vary by object store: GCS=500, Azure=10000, S3/R2/DO=1750, Filesystem=100.
+#replication.primary.cleaner.max.requests.per.second=
+
+## How often progress is persisted during a cleanup cycle. Range: 100ms – 60s.
+#replication.primary.cleaner.progress.write.interval=5s
+
+## Wait time after DROP TABLE before removing the table's data from object storage.
+#replication.primary.cleaner.dropped.table.cooloff=1h
+
+## Retries for transient object store failures during cleanup. Range: 0 – 100.
+#replication.primary.cleaner.retry.attempts=20
+
+## Delay between cleanup retries. Range: 0 – 5m.
+#replication.primary.cleaner.retry.interval=2s
+
+### Checkpoint History (requires replication)
+
+## Enable the checkpoint history tracker. Defaults to true when replication is enabled.
+#checkpoint.history.enabled=true
+
+## Maximum checkpoint records retained per instance.
+#checkpoint.history.keep.count=100
+
+## Retry interval for syncing checkpoint history to the object store after burst retries fail.
+#checkpoint.history.long.retry.interval=1m
+
 ### OIDC (QuestDB Enterprise Only)
 
 # Enables/Disables OIDC authentication. Once enabled few other
